--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #f8f8f8
+    background-color: #f8f8f8;
 }
 
 a {
     text-decoration: none;
-    color: rgba(132,133,135, 0.7);
-    font-family: 'Oxygen Mono', monospace; 
+    color: rgba(132, 133, 135, 0.7);
+    font-family: 'Oxygen Mono', monospace;
 }
 
 a:hover {
@@ -14,7 +14,7 @@ a:hover {
 }
 
 bold {
-    color: rgb(132,133,135);
+    color: rgb(132, 133, 135);
 }
 
 italic {
@@ -23,35 +23,31 @@ italic {
 
 p {
     font-family: 'Oxygen Mono', monospace;
-    color: rgba(132,133,135, 0.8);
+    color: rgba(132, 133, 135, 0.8);
 }
 
-.header-image {
-    display: flex;
-}
-
-.header-image img {
+.home-section {
+    background: url('./img/header.jpg') no-repeat center center fixed;
+    background-size: cover;
     height: 100vh;
     width: 100%;
-    object-fit: cover;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .header-text {
     position: absolute;
-    align-content: center;
-    height: auto;
     top: 45%;
-    left: 45%;
-    z-index: 99999;
-    bottom: 0;
-    color: rgba(132,133,135, 0.6);
+    left: 42%;
+    height: auto;
+    color: rgba(132, 133, 135, 0.6);
     font-family: 'Poppins', sans-serif;
-    margin-bottom: 100px;
 }
 
 .terminal {
     font-size: 70px;
     font-weight: 700;
+    text-align: left;
 }
 
 h1 {
@@ -61,7 +57,7 @@ h1 {
 
 .sub-text {
     font-family: 'Oxygen Mono', monospace;
-    color: rgba(132,133,135, 0.5);
+    color: rgba(132, 133, 135, 0.5);
     font-size: 25px;
     margin-top: 10px;
 }
@@ -73,13 +69,8 @@ nav {
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 99999;
     font-family: 'Oxygen Mono', monospace;
-    color: rgba(132,133,135, 0.7);
-}
-
-li {
-
+    color: rgba(132, 133, 135, 0.7);
 }
 
 li:nth-child(2) {
@@ -105,40 +96,36 @@ li:nth-child(6) {
 }
 
 li:nth-child(7) {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 li:nth-child(8) {
-    margin-top: 20px;
+    margin-top: 10px;
+}
+
+#DevMountain {
+    color: #5ba868;
 }
 
 li:nth-child(9) {
     margin-top: 10px;
 }
 
-#DevMountain {
-    color: #5ba868;    
-}
-
 li:nth-child(10) {
-    margin-top: 10px;
+    margin-top: 40px;
 }
 
 li:nth-child(11) {
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 li:nth-child(12) {
     margin-top: 10px;
 }
 
-li:nth-child(13) {
-    margin-top: 10px;
-}
-
-
 
 /* EXCEL INTERIORS WEBSITE */
+
 img.EI {
     margin: 20px;
 }
@@ -147,15 +134,96 @@ img.EI {
     display: flex;
     justify-content: flex-start;
     margin-right: 200px;
-     text-align: justify; 
+    text-align: justify;
 }
 
 
 /* MR REACT APP */
+
 img.MR {
     margin: 20px;
+    height: auto;
 }
 
 .project-link {
     color: #5ba868;
 }
+
+
+/* MEDIA QUERIES */
+
+@media (max-width: 1000px) {
+    /*HOME */
+    .home-section {
+        position: relative;
+    }
+    .flexContainer {
+        margin-top: 20px;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+    .header-text {
+        position: relative;
+        top: 0;
+        left: 0;
+        margin-left: 30px;
+    }
+
+    .terminal {
+        font-size: 30px;
+    }
+
+    h1 {
+        font-size: 30px;
+    }
+
+    .sub-text {
+        display: none;
+    }
+
+    nav {
+        position: relative;
+        margin-top: 20px;
+    }
+
+    li:nth-child(10) {
+        margin-top: 20px;
+    }
+
+    /* MR */
+    .flex {
+        width: 100%;
+    }
+
+}
+
+@media (max-width: 1300px) {
+    /* MR */
+    .flex {
+        flex-wrap: wrap;
+    }
+
+    p {
+        margin-left: 20px;
+        width: 825px;
+    }
+}
+
+@media (max-width: 800px) {
+    .flex {
+        width: 100%;
+    }
+
+    p {
+        font-size: 20px;
+        width: 100%;
+    }
+
+    img.MR {
+        margin: 20px;
+        max-width: 100%;
+        height: auto;
+    }
+}
+
