--- a/main.css
+++ b/main.css
@@ -4,13 +4,15 @@ body {
 
 a {
     text-decoration: none;
-    color: rgba(132, 133, 135, 0.7);
+    /* color: rgba(132, 133, 135, 0.7); */
+    color: #5ba868;
     font-family: 'Oxygen Mono', monospace;
 }
 
 a:hover {
     color: #5ba868;
     font-size: 18px;
+    text-decoration: none;
 }
 
 bold {
@@ -79,10 +81,12 @@ li:nth-child(2) {
 
 li:nth-child(3) {
     margin-top: 10px;
+    
 }
 
 li:nth-child(4) {
     margin-top: 10px;
+    margin-left: 25px;
 }
 
 li:nth-child(5) {
@@ -97,6 +101,7 @@ li:nth-child(6) {
 
 li:nth-child(7) {
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 li:nth-child(8) {
@@ -112,15 +117,24 @@ li:nth-child(9) {
 }
 
 li:nth-child(10) {
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 li:nth-child(11) {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 li:nth-child(12) {
     margin-top: 10px;
+}
+
+li:nth-child(13) {
+    margin-top: 10px;
+}
+
+li:nth-child(14) {
+    margin-top: 10px;
+    
 }
 
 
